Implement prescribe therapy frontend

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
@@ -2,9 +2,15 @@
     ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
-    <div id="buttons">
-        <button id="btn" asp-controller="Home" asp-action="Add"> Add new pharmacy     </button>
-        <button id="btn" asp-controller="Home" asp-action="ActionAndBenefits"> Action & Benefits     </button>
-        <button id="btn" asp-controller="Home" asp-action="Reports"> Reports    </button>
-    </div>
+<div id="buttons">
+    <button id="btn" onclick="addPage()" asp-controller="Home" asp-action="http://localhost:49544/home/add"> Add new pharmacy     </button>
+    <button id="btn" onclick="" asp-controller="Home" asp-action="http://localhost:49544/home/action"> Action & Benefits     </button>
+    <button id="btn" onclick="addReports()" asp-controller="Home" asp-action="http://localhost:49544/reports"> Reports    </button>
+    <button id="btn" onclick="getSpecification()" asp-controller="Home" asp-action="http://localhost:49544/getSpecification"> Get Medications Specification    </button>
+    <button id="btn" onclick="therapy()" asp-controller="Home" asp-action="Therapy"> Prescribe therapy  </button>
 
+</div>
+
+
+
+<script src="~/Views/assets/js/index.js"></script>
