--- a/MQuince/MQuince.WebAPI/clientapp/src/assets/style.css
+++ b/MQuince/MQuince.WebAPI/clientapp/src/assets/style.css
@@ -161,12 +161,13 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
+    margin-top:15px;
     background: #fff;
     transition: all 0.5s;
     padding: 25px 0;
     position: fixed;
     z-index: 99;
-    top: 10px;
+    top: 15px;
     position: fixed;
     box-shadow: 0px 2px 15px rgba(25, 119, 204, 0.1);
 }
@@ -320,6 +321,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Get Startet Button */
+.feedback-btn {
+    margin-left: 15px;
+    background: white;
+    white-space: nowrap;
+    transition: 0.3s;
+    font-size: 20px;
+    display: inline-block;
+}
+
 .appointment-btn {
     min-height:30px;
     min-width:200px;
