Modify grpc protocol

--- a/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: whitesmoke;
+    background-image: url('back.jpg');
     background-position: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -90,9 +90,9 @@ td
     padding: 20px;
 }
 
-.specification-container {
-    position:center;
-    margin-top: -250px;
+#availablemedication-container {
+    position: center;
+    margin-top: -500px;
     font-size: 22px;
-      
 }
+
