Modify field names

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/sendMessageGrpc.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/sendMessageGrpc.cshtml
@@ -16,7 +16,7 @@
 </form>
 @foreach (var a in Model)
 {
-    <p>  Medication: @Html.DisplayFor(modelItem => a.name)  @Html.DisplayFor(modelItem => a.status) </p>
+    <p>  Medication: @Html.DisplayFor(modelItem => a.Name)  @Html.DisplayFor(modelItem => a.Status) </p>
 }
 
 <script src="~/Views/assets/js/availablemedication.js"></script>
