--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/Add.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/Add.cshtml
@@ -6,8 +6,9 @@
 <div class="phamracyContainer">
     <div class="containsForm">
         <form action="javascript:void(0);" onsubmit="addItem()">
-            <table>
-                <tr> <td><label> API-KEY </label></td></tr>
+            <table style="margin-top: 5px; padding: -10px;" border="1px">
+                <tr style="margin-top: -10px;">
+                <td><label> API-KEY </label></td></tr>
                 <tr> <td> <input type="text" id="apiKey" v-model="apiKey"></input></td></tr>
                 <tr> <td> <label> NAME </label></td></tr>
                 <tr> <td> <input v-model="name" id="name"></input> </td></tr>
