--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/urgentMessage.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/urgentMessage.cshtml
@@ -5,19 +5,37 @@
 }
 
 @model IEnumerable<MQuince.Integration.Entities.GrpcMessage>
-<div id="urgentMesssage-container">
-    <h3> Enter the medicine: </h3>
-    <form onsubmit="sendName()" action="javascript:void(0);">
-        <table>
-            <tr> <td><label> Medication name: </label></td></tr>
-            <tr> <td> <input type="text" id="name" /></td></tr>
+    <div id="urgentMesssage-container">
+        <h3> Enter the medicine: </h3>
+        <form onsubmit="sendName()" action="javascript:void(0);">
+            <table style="margin-top: 0px; padding: -5px;" border="1px">
+                <tr style="margin-top: -5px;">
+                    <td><label> Medication name: </label></td>
+                </tr>
+                <tr> <td> <input type="text" id="name" /></td></tr>
 
-            <tr> <td><label> Quantity: </label></td></tr>
-            <tr> <td> <input type="text" id="quantity" /></td></tr>
+                <tr> <td><label> Quantity: </label></td></tr>
+                <tr> <td> <input type="text" id="quantity" /></td></tr>
 
-            <tr> <td> <input id="send" type="submit" value="Send"></td></tr>
-        </table>
-        <script src="~/Views/assets/js/urgentMedication.js"></script>
-    </form>
-</div>
+                <tr>
+                    <td>
+                        <input id="btn" type="submit" value="Send HTTP">
+                        <input id="btn" type="submit" value="Send GRPC">
+                    </td>
+                </tr>
+
+
+               
+
+            </table>
+
+            
+            
+            <script src="~/Views/assets/js/urgentMedication.js"></script>
+        </form>
+        @foreach (var a in Model)
+        {
+    <p>The medicine was successfully bought from the @Html.DisplayFor(modelItem => a.Name) pharmacy!</p>
+        }
+    </div>
 
