Modify name of html pages and absoluth path to relative

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/AddPharmacy.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/AddPharmacy.cshtml
@@ -16,14 +16,16 @@
                 <tr> <td> <input id="btn" type="submit" value="Save" onclick="alert('Successefully saved!')"></td></tr>
             </table>
 
-
-
-
-
-
-
-            <script src="~/Views/assets/js/addPharmacy.js"></script>
-            <script src="~/Views/assets/js/site.js"></script>
+            <script src="~/Views/assets/js/AddPharmacy.js"></script>
         </form>
     </div>
 </div>
+<style>
+    table {
+        width: 50%;
+        border: none;
+        padding: 5px;
+        text-align: center;
+    }
+
+</style>
