--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/getSpecification.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/getSpecification.cshtml
@@ -19,7 +19,7 @@
 
         </table>
     </form>
-    <script language="JavaScript" type="text/javascript" src="~/Views/assets/js/specif.js"></script>
+    <script language="JavaScript" type="text/javascript" src="~/Views/assets/js/GetSpecification.js"></script>
 
 </div>
            
