--- a/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
@@ -1,13 +1,13 @@
 body
 {
     background-image: url('back.jpg');
-    background-position: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat;
+    background-size: 100%;
+    margin: 0 auto;
 }
 .nav-bar
 {
-    width: 100%;
+    width: auto;
     height: 60px;
    
     display: block;
@@ -50,8 +50,8 @@ button:hover
 .container
 {
     position: absolute;
-    top: 100px;
-    left: 2%;
+    
+    
     width: 100%;
 }
 #buttons
@@ -80,13 +80,14 @@ button:hover
 
 .reportsDiv
 {   margin-left: 300px;
-    margin-top: -220px;
+   
     width: 100%;
     height: 100%;
 }
 
 td
 {
+    
     padding: 20px;
 }
 
@@ -95,4 +96,16 @@ td
     margin-top: -500px;
     font-size: 22px;
 }
+#action-div {
+    position: absolute;
+    top: 100px;
+    left: 2%;
+    width: 100%;
+}
 
+.tabelActionClass {
+    width: 60%;
+    border: none;
+    padding: 5px;
+    text-align: center;
+}
