--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/ActionAndBenefits.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/ActionAndBenefits.cshtml
@@ -2,25 +2,53 @@
     ViewData["Title"] = "Action and benefits";
     Layout = "_Layout";
 }
-@model IEnumerable<MQuince.Integration.Entities.ActionsAndBenefits>
-<div class="action-div">
-    <h3>Actions and benefits: </h3>
-    <table class="table" border="1px">
-        @foreach (var a in Model)
-        {
-            <tr>
-                <td>@Html.DisplayFor(modelItem => a.Action) </td>
-                <td>@Html.DisplayFor(modelItem => a.Date) </td>
-                <td><button type="button" class="Approve"> Approve </button></td>
-                <td><button type="button" class="Disapprove"> Disapprove </button></td>
-            </tr>
 
-        }
+<div class="action-div">
+    <h2>New action: </h2>
+    <table class="table" id="tabelAction">
+        <tr>
+            <th>Phamracy name</th>
+            <th>Action name</th>
+            <th>Begin date</th>
+            <th>End date</th>
+            <th>Old Cost</th>
+            <th>New Cost</th>
+        </tr>
+        <tbody>
+        </tbody>
+
     </table>
-    <script src="~/Views/assets/js/action.js"></script>
+
+    
+    <script>
+
+
+    </script>
+    <script src="~/Views/assets/js/ActionAndBenefits.js"></script>
     <script src="~/Views/assets/js/jquery.min.js"></script>
 </div>
 
+<style>
+    
+    table {
+        border: none;
+        padding: 5px;
+        font-size: 22px;
+        text-align: center;
+        background-color: cornflowerblue;
+        opacity: 0.7;
+        width: 100%;
+    }
 
+    td {
+        width: auto;
+    }
 
+    tr {
+        width: auto;
+    }
 
+    button {
+        font-size: 22px;
+    }
+</style>
