Implement tender frontend

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/tender.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/tender.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "tender";
     Layout = "_Layout";
 }
-<div id="urgentMesssage-container">
+<div id="tender-container">
     <h3> Enter the medicine: </h3>
     <form onsubmit="sendName()" action="javascript:void(0);">
         <table style="margin-top: 0px; padding: -5px;" border="1px">
@@ -14,7 +14,7 @@
 
             <tr>
                 <td><label> Description: </label></td>
-                <td> <input type="text" id="descritpion" /></td>
+                <td> <input type="text" style="width:400px; height: 70px;" id="descritpion" /></td>
             </tr>
 
             <tr>
