--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
     <button id="btn" onclick="exists()" asp-controller="Home" asp-action="sendMessageGrpc"> Ask for medicatons </button>
     <button id="btn" onclick="urgentMessage()" asp-controller="Home" asp-action="http://localhost:49544/api/urgentMessage"> Urgent Mediaction </button>
     <button id="btn" onclick="tender()" asp-controller="Home" asp-action="http://localhost:49544/api/tender"> Create Tender </button>
+    <button id="btn" onclick="ViewTender()" asp-controller="Home" asp-action="http://localhost:49544/api/ViewTender"> Tenders </button>
 
 </div>
 
