Modify home frontend

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
     <button id="btn" onclick="urgentMessage()" asp-controller="Home" asp-action="http://localhost:49544/api/urgentMessage"> Urgent Mediaction </button>
     <button id="btn" onclick="tender()" asp-controller="Home" asp-action="http://localhost:49544/api/tender"> Create Tender </button>
     <button id="btn" onclick="ViewTender()" asp-controller="Home" asp-action="http://localhost:49544/api/ViewTender"> Tenders </button>
+    <button id="btn" onclick="ShowAllOffers()" asp-controller="Home" asp-action="http://localhost:49544/api/ShowAllOffers"> Show all offer </button>
 
 </div>
 
