--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/ViewTender.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/ViewTender.cshtml
@@ -5,7 +5,7 @@
 @model IEnumerable<MQuince.Integration.Entities.Tender>
 <div class="action-div">
     <h3>Tenders: </h3>
-    <table  id="tenderTable" border="1px">
+    <table  id="tenderTable" class="tenderTable" border="1px">
         
             <tr>
                 <td colspan="5">Opened tenders:</td>
