--- a/MQuince/MQuince.Integration.HospitalApp/Views/Shared/_Layout.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
             window.location.replace("http://localhost:49544/home");
         }
     </script>
+    <link rel="stylesheet" type="text/css" href="~/Views/assets/css/PharmacyOffersStyle.css">
     <link rel="stylesheet" href="~/Views/assets/css/addPharamcy.css" type="text/css" runat="server">
+    <link rel="stylesheet" href="~/Views/assets/css/PharmacyOffersStyle.css" type="text/css" runat="server">
     <title> HOSPITAL SERVER </title>
 </head>
 
@@ -37,8 +39,6 @@
         </div>
     </div>
 
-
-    <!--<script src="index.js"></script>-->
     @RenderSection("Scripts", required: false)
     
 </body>
