--- a/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
@@ -2,8 +2,9 @@ body
 {
     background-image: url('back.jpg');
     background-position: fixed;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
+    margin: 0 auto;
 }
 .nav-bar
 {
@@ -95,4 +96,5 @@ td
     margin-top: -500px;
     font-size: 22px;
 }
+
 
