--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/Index.cshtml
@@ -10,6 +10,8 @@
         <button id="btn" onclick="therapy()" asp-controller="Home" asp-action="Therapy"> Prescribe therapy  </button>
         <button id="btn" onclick="exists()" asp-controller="Home" asp-action="sendMessageGrpc"> Ask for medicatons </button>
         <button id="btn" onclick="urgentMessage()" asp-controller="Home" asp-action="http://localhost:49544/api/urgentMessage"> Urgent Mediaction </button>
+        <button id="btn" onclick="requestForDirector()" asp-controller="Home" asp-action="http://localhost:49544/api/requestForDirector"> Request For Director </button>
+
 
     </div>
 
