--- a/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
@@ -24,29 +24,24 @@ body
     margin-top: 16px;
     
 }
-.navButton
-{
+.navButton {
     float: right;
     margin-right: 2%;
     margin-top: 16px;
 }
 
-button
-{
+button {
     border-style: none;
-    background-color: transparent;
+    background-color: cornflowerblue;
     border: none;
-    height: 30px;
-   
+    height: 33px;
+
 }
 
-button:hover
-{
-    color: white;
-    background-color: transparent;
-    
-   
-}
+    button:hover {
+        color: cornflowerblue;
+        background-color: white;
+    }
 .container
 {
     position: absolute;
@@ -54,29 +49,59 @@ button:hover
     left: 2%;
     width: 100%;
 }
-#buttons
-{
+#buttons {
     position: fixed;
     display: inline-block;
     width: 50%;
 }
-#btn
-{
+
+#btn {
     background-color: cornflowerblue;
     border-radius: 12px;
     padding: 10px 30px;
     margin: 10px;
     height: 20%;
-    width: 60%;
+    width: 35%;
     display: block;
 }
-#btn:hover
-{
-    background-color:thistle;
-    opacity: 0.8;
-    color: black;
 
+#btn:hover {
+        background-color: thistle;
+        opacity: 0.8;
+        color: black;
 }
+#btn9 {
+    background-color: dodgerblue;
+    border-radius: 12px;
+    padding: 10px 30px;
+    margin: 10px;
+    height: 20%;
+    align-content:center;
+    width: 35%;
+    display: block;
+}
+
+    #btn9:hover {
+        background-color: thistle;
+        opacity: 0.8;
+        color: black;
+    }
+#btn2 {
+    background-color: cornflowerblue;
+    border-radius: 12px;
+    padding: 10px 30px;
+    margin: 10px;
+    height: 25%;
+    width: 21%;
+    margin-left: 200px;
+    display: block;
+}
+
+    #btn2:hover {
+        background-color: thistle;
+        opacity: 0.8;
+        color: black;
+    }
 
 .reportsDiv
 {   margin-left: 300px;
@@ -96,3 +121,15 @@ td
     font-size: 22px;
 }
 
+#urgentMesssage-container {
+    position: absolute;
+    top: 20px;
+    left: -1.2%;
+    width: 100%;
+}
+.tableUrgentProcurementClass {
+    width: 30%;
+    border: none;
+    padding: 5px;
+    text-align: center;
+}
