--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/sendMessageGrpc.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/sendMessageGrpc.cshtml
@@ -16,18 +16,26 @@
                 <tr> <td><label> Quantity: </label></td></tr>
                 <tr> <td> <input type="text" id="quantity" /></td></tr>
 
-                <tr>
-                    <td>
-                        <input id="btn" type="submit" value="Send">
-                    </td>
-                </tr>
             </table>
+            <input id="btn2" type="submit" value="Send" onclick="alert('Medication was successefully send to pharmacy!')">
 
             <script src="~/Views/assets/js/availablemedication.js"></script>
         </form>
         @foreach (var a in Model)
-        {
-            <p>  Medication @Html.DisplayFor(modelItem => a.Name)  @Html.DisplayFor(modelItem => a.Status) </p>
+        {<p>  
+              Medication @Html.DisplayFor(modelItem => a.Name) @Html.DisplayFor(modelItem => a.Status) 
+        </p>           
         }
-    </div>
+        </div>
+    <style>
 
+        table {
+            background-color: deepskyblue;
+            
+        }
+        p {
+            font-size: 20px;
+            color: red;
+        }
+        </style
+    
