--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/Add.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/Add.cshtml
@@ -5,7 +5,7 @@
 
 <div class="phamracyContainer">
     <div class="containsForm">
-        <form action="javascript:void(0);" onsubmit="addItem()">
+        <form onsubmit="addItem()" action="javascript:void(0);" >
             <table style="margin-top: 5px; padding: -10px;" border="1px">
                 <tr style="margin-top: -10px;">
                 <td><label> API-KEY </label></td></tr>
@@ -16,7 +16,6 @@
                 <tr><td><input type="text" v-model="url" id="url"></input> </td></tr>
                 <tr> <td> <input id="btn" type="submit" value="Save" onclick="alert('Successefully saved!')"></td></tr>
             </table>
-            <script src="~/Views/assets/js/addPharmacy.js"></script>
             <script src="~/Views/assets/js/site.js"></script>
         </form>
     </div>
