Refactor tender according to ddd

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/ViewTender.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/ViewTender.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "view Tender";
     Layout = "_Layout";
 }
-@model IEnumerable<MQuince.Integration.Entities.Tender>
+@model IEnumerable<MQuince.TenderProcurement.Domain.Tender>
 <div class="action-div">
     <h3>Tenders: </h3>
     <table  id="tenderTable" class="tenderTable" border="1px">
