Refactor urgent procurement according to ddd

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/requestForDirector.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/requestForDirector.cshtml
@@ -5,70 +5,72 @@
 }
 
 
-@model IEnumerable<MQuince.Integration.Entities.GrpcMessage>
+@model IEnumerable<MQuince.UrgentProcurement.Domain.GrpcMessage>
+
+<div id="requestForDirector-container">
+    @foreach (var a in Model)
+    {
+        <p>  Medication @Html.DisplayFor(modelItem => a.Name) @Html.DisplayFor(modelItem => a.Status) </p>
+
+    }
 
     <div id="requestForDirector-container">
-        @foreach (var a in Model)
-        {
-            <p>  Medication @Html.DisplayFor(modelItem => a.Name) @Html.DisplayFor(modelItem => a.Status) </p>
 
+        <table style="margin-top: 0px; padding: -5px;" border="1px">
+            <tr style="margin-top: -5px;">
+                <td><label> Enter the pharmacy: </label></td>
+            </tr>
+            <tr> <td> <input type="text" id="name" /></td></tr>
+
+
+
+        </table>
+        <button id="btn2" onclick="alert('Medication was successefully send to pharmacy!')">Sent</button>
+
+
+
+
+
+
+
+        <!--<button id="btn1" type="submit" class="send" onclick="alert('Medication was successefully send to pharmacy!')">Send HTTP</button>-->
+
+
+        <script src="~/Views/assets/js/requestForDirector.js"></script>
+        <script src="~/Views/assets/js/jquery.min.js"></script>
+
+    </div>
+    <style>
+
+        table {
+            border: none;
+            padding: 5px;
+            font-size: 22px;
+            text-align: center;
+            margin-top: 100px;
+            margin-left:20px;
+            background-color: deepskyblue;
+            opacity: 0.7;
+            width: 48%;
         }
-        
-        <div id="requestForDirector-container">
 
-                <table style="margin-top: 0px; padding: -5px;" border="1px">
-                    <tr style="margin-top: -5px;">
-                        <td><label> Enter the pharmacy: </label></td>
-                    </tr>
-                    <tr> <td> <input type="text" id="name" /></td></tr>
+        td {
+            font-size: 20px;
+            width: auto;
+        }
 
+        tr {
+            font-size: 20px;
+            width: auto;
+        }
 
+        button {
+            font-size: 22px;
+        }
 
-                </table>
-                <button id="btn2"  onclick="alert('Medication was successefully send to pharmacy!')">Sent</button>
-
-              
-
-
-
-
-
-            <!--<button id="btn1" type="submit" class="send" onclick="alert('Medication was successefully send to pharmacy!')">Send HTTP</button>-->
-
-
-            <script src="~/Views/assets/js/requestForDirector.js"></script>
-            <script src="~/Views/assets/js/jquery.min.js"></script>
-
-        </div>
-        <style>
-
-            table {
-                border: none;
-                padding: 5px;
-                font-size: 22px;
-                text-align: center;
-                margin-top: 130px;
-                background-color: deepskyblue;
-                opacity: 0.7;
-                width: 48%;
-            }
-
-            td {
-                font-size: 20px;
-                width: auto;
-            }
-
-            tr {
-                font-size: 20px;
-                width: auto;
-            }
-
-            button {
-                font-size: 22px;
-            }
-            p {
-                font-size: 20px;
-                color: red;
-            }
-        </style>
+        p {
+            font-size: 20px;
+            color: red;
+        }
+    </style>
 
