--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/urgentMessage.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/urgentMessage.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "urgentMessage";
     Layout = "_Layout";
 }
-@model IEnumerable<MQuince.Integration.Entities.GrpcMessage>
+@model IEnumerable<MQuince.UrgentProcurement.Domain.GrpcMessage>
 
     <div id="urgentMesssage-container">
         <h3> Enter the medicine: </h3>
@@ -16,7 +16,9 @@
             <tr> <td> <input type="text" id="quantity" /></td></tr>
             <tr>
                 <td>
-                    <button  class="send" onclick="alert('Medication was successefully send to pharmacy!')">Send GRPC</button>
+                    <button class="send" onclick="alert('Medication was successefully send to pharmacy!')">Send GRPC</button>
+                    <button class="send" onclick="alert('Medication was successefully send to pharmacy!')">Send HTTP</button>
+
                 </td>
             </tr>
             <tbody>
@@ -48,6 +50,7 @@
         margin-top: 130px;
         background-color: deepskyblue;
         opacity: 0.7;
+        margin-left:20;
         width: 45%;
     }
 
@@ -63,7 +66,7 @@
 
     button {
         font-size: 22px;
-        margin-left:27px;
+        margin-left:190px;
     }
     p {
         font-size: 20px;
