Modify generate file for therapy

--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/PrescribeTherapy.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/PrescribeTherapy.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Therapy";
+    ViewData["Title"] = "PrescribeTherapy";
     Layout = "_Layout";
 }
 
-@using(Html.BeginForm("Therapy", "Home", FormMethod.Post))
+@using(Html.BeginForm("PrescribeTherapy", "Home", FormMethod.Post))
 {
 <table style="margin-top: 0px; padding: -5px;" border="1px">
     <tr style="margin-top: -10px;">
