--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/AddPharmacy.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/AddPharmacy.cshtml
@@ -14,7 +14,7 @@
                 <tr> <td> <input v-model="name" id="name"></input> </td></tr>
                 <tr> <td> <label> WEBSITE </label></td></tr>
                 <tr><td><input type="text" v-model="url" id="url"></input> </td></tr>
-                <tr> <td> <input id="btn" type="submit" value="Save" onclick="alert('Successefully saved!')"></td></tr>
+                <tr> <td> <input id="btn" type="submit" value="Save"></td></tr>
             </table>
             <script src="~/Views/assets/js/AddPharmacy.js"></script>
 
