--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/tender.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/tender.cshtml
@@ -35,7 +35,7 @@
 
             <tr>
                 <td>
-                    <input id="btn" type="submit" value="Create">
+                    <input id="btn1" type="submit" value="Create">
                 </td>
             </tr>
 
