--- a/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/assets/css/styles.css
@@ -32,11 +32,14 @@ body
 }
 
 button {
-    border-style: none;
     background-color: cornflowerblue;
-    border: none;
-    height: 33px;
-
+    border-radius: 12px;
+    margin: 10px;
+    height: 25px;
+    margin-top: -0.5px;
+    width: 120px;
+    display: block;
+    box-shadow: 0 1px 2px #5e5d5b;
 }
 
     button:hover {
@@ -53,6 +56,7 @@ button {
 #buttons {
     position: fixed;
     display: inline-block;
+
     width: 50%;
 }
 
@@ -64,6 +68,21 @@ button {
     height: 20%;
     width: 35%;
     display: block;
+}
+
+#btn1 {
+    background-color: cornflowerblue;
+    border-radius: 12px;
+    padding: 10px 30px;
+    margin: 10px;
+    height: 20%;
+    width: 120px;
+    display: block;
+}
+#btn1:hover {
+    background-color: thistle;
+    opacity: 0.8;
+    color: black;
 }
 
 #btn:hover {
