--- a/MQuince/MQuince.Integration.HospitalApp/Views/Home/urgentMessage.cshtml
+++ b/MQuince/MQuince.Integration.HospitalApp/Views/Home/urgentMessage.cshtml
@@ -5,7 +5,6 @@
 @model IEnumerable<MQuince.UrgentProcurement.Domain.GrpcMessage>
 
     <div id="urgentMesssage-container">
-        <h3> Enter the medicine: </h3>
         <table class="table" id="table" style="margin-top: 0px; padding: -5px;" border="1px">
             <tr style="margin-top: -5px;">
                 <td><label> Medication name: </label></td>
@@ -16,8 +15,8 @@
             <tr> <td> <input type="text" id="quantity" /></td></tr>
             <tr>
                 <td>
-                    <button class="send" onclick="alert('Medication was successefully send to pharmacy!')">Send GRPC</button>
-                    <button class="send" onclick="alert('Medication was successefully send to pharmacy!')">Send HTTP</button>
+                    <button class="send" >Send GRPC</button>
+                    <button class="send" >Send HTTP</button>
 
                 </td>
             </tr>
@@ -50,7 +49,7 @@
         margin-top: 130px;
         background-color: deepskyblue;
         opacity: 0.7;
-        margin-left:20;
+        margin-left:20px;
         width: 45%;
     }
 
